styles/offers/create/overview.module.sass
@import 'styles/sass/colors'
@import 'styles/sass/variables'
@import 'styles/sass/mixins'

// Global styles
.main
  display: flex
  flex-direction: column
  //justify-content: space-between
  height: 100%
  padding: 2rem 60px 60px 60px
  width: 100%
.pageWrapper
  margin-top: 4rem
  //min-height: 70vh
.thumbnails
  object-fit: cover
  cursor: pointer
  border-radius: 10px
.selectedThumbnail
  border: 2px solid $blue
.mainImageWrapper
  width: 590px
  height: 388px
  overflow: hidden
  position: relative
.creatorImageTag
  width: 68px
  height: 35px
  position: absolute
  bottom: 1.3rem
  left: 1rem
.selectedImage
  cursor: zoom-in
  object-fit: cover
  border-radius: 20px
  width: 590px
  height: 388px
.clickedImageModal
  display: flex
  text-align: center
  flex-direction: column
  justify-content: center
  align-items: center
.clickedImageBox
  display: flex
  text-align: center
  flex-direction: column
  justify-content: center
  align-items: center
  padding: 4rem
  width: auto
  height: auto
.clickedImage
  width: auto
  height: auto
.creatorBannerWrapper
  padding: 32px
  width: 100%
  border-radius: 20px
.creatorImage
  width: 105px
  height: 56px
.creatorText
  +Light
  font-style: italic
  font-size: 17px
  color: #D9D9DD
.offerWrapper
  //max-width: 480px
  width: 480px
.noAvailableComments
  +SemiBold
  font-size: 19px
  color: $primary
.noAvailableRatings
  +Regular
  font-size: 15px
  color: $primary
.noComments
  +Regular
  font-size: 17px
  color: #525256
.title
  +SemiBold
  font-size: 32px
  margin-top: 0
  margin-bottom: 0
  color: $primary
  word-wrap: anywhere
.rating
  +Regular
  font-size: 15px
  color: $primary
.shopName
  +Regular
  font-size: 15px
  color: $blue
.madeInFlag
  font-size: 2rem !important
  line-height: 2rem !important
.madeInSpan
  +Regular
  font-size: 15px
  color: #525256
.categories
  +Regular
  font-size: 15px
.descriptionWrapper
  margin-top: 2rem !important
.descriptionTitle
  +SemiBold
  font-size: 19px
  color: $primary
.descriptionBody
  +Regular
  font-size: 17px
  color: #525256
.colorBody, .forWhomBody, .sizesBody
  @extend .descriptionBody
  font-size: 15px
  margin-top: 0
  margin-bottom: 0
.colorTitle, .forWhomTitle, .sizesTitle
  +Medium
  font-size: 15px
  color: $primary
.priceWrapper
  margin-top: 2rem
.price
  +SemiBold
  font-size: 32px
  color: $primary
.oldPrice
  color: $primary
  text-decoration: line-through
.solderPrice
  @extend .price
  color: #E12D3D
.priceBy
  +Regular
  font-size: 13px
  color: #84848A
.quantity
  +Medium
  font-size: 13px
  color: #E12D3D
.clickAnddeliveriesWrapper
  border-radius: 20px
  border: 1px solid #D9D9DD
  width: 100%
  margin: 2rem auto !important
  overflow: hidden
.divider
  color: #D9D9DD
.deliveriesTitle
  +Medium
  font-size: 15px
  color: $primary
  word-break: break-word
.deliveriesTitleNotFound
  @extend .deliveriesTitle
  color: #84848A !important
.deliveryPrice
  +Medium
  font-size: 15px
  color: $primary
.deliveryDetails
  +Regular
  font-size: 15px
  color: #525256
.deliveryDetailsNotFound
  @extend .deliveryDetails
  color: #84848A !important
.deliveryRow
  padding: .5rem 24px

.deliveryNotFoundRow
  @extend .deliveryRow
  background-color: #f2f2f3
.mobileOnly
  display: none !important
// solder modal
.modalContentWrapper
  margin: 24px 32px 40px
.topContainer
  margin: 12px 32px 12px
.header
  +SemiBold
  font-size: 24px
.description
  margin: 0 !important
  p
    margin-top: 0 !important
    margin-bottom: 0 !important
.doubleTabWrapper
  height: 100%
  margin-top: 1rem
.priceInputField
  +SemiBold
  font-size: 75px
  font-weight: 600
  text-align: center
  margin: 0 auto
  border: 0
  width: 100%
  &::before
    content: "|"
.oldSolderValue
  +SemiBold
  font-size: 21px
  color: $primary
  text-decoration: line-through
.oldSolderText
  +Regular
  font-size: 13px
  color: #525256
.cancelButton
  +Medium
  font-size: 17px
  background-color: transparent
  display: flex
  flex-direction: row
  justify-content: space-evenly
  align-items: center
  cursor: pointer
  margin: 5px 5px
  color: #E12D3D
  text-transform: none
.customField
  margin: 0 auto
  &::placeholder
    +Regular
    font-size: 19px
    color: #A3A3AD
.primaryButtonWrapper
  width: 100%
  text-align: center
.primaryButton
  margin-top: 2rem
@media #{$tablette}
  .creatorBannerWrapper
    padding: 2rem
  .priceInputField
    width: 100%
  .header
    font-size: 21px
    letter-spacing: -0.01em
  .main
    width: 100%
    padding: 1.5rem 1.5rem 1.5rem 1.5rem
  .desktopOnly
    display: none
  .offerWrapper
    min-width: 100%
    margin-left: 0 !important
    width: 100%
  .clickAnddeliveriesWrapper
    width: 100%
    margin-top: 2rem !important
    margin-bottom: 2rem !important
    overflow: hidden
  .deliveryRow
    padding-top: .3rem
    padding-bottom: .3rem
  .mobileOnly
    display: flex !important
  .noCommentsAvailableContent
    flex-direction: column !important
    align-items: flex-start !important
    justify-content: flex-start !important
  .swiperSlide
    width: 100%
    height: 100%
  .mainImageWrapper
    width: calc(100vw - 3rem) !important
    height: 400px !important
  .selectedImage
    object-fit: cover
    width: 100% !important
    height: 100% !important
    max-height: 400px !important
  .imagesWrapper
    flex-direction: column !important
  .primaryButtonWrapper
    width: 356px
@media #{$mobile}
  .mainImageWrapper
    height: 200px !important
  .main
    width: 100%
    padding: 1.5rem 1.5rem 1.5rem 1.5rem
  .desktopOnly
    display: none

